Fix captcha saving during installation

--- a/install/language/en.json
+++ b/install/language/en.json
@@ -48,7 +48,9 @@
     "google_analytics_web_id": "Google Analytics website ID",
     "captcha": "Captcha",
     "enable": "Enable",
+    "disable": "Disable",
     "google_captcha": "Google Captcha",
+    "image_captcha": "Image Captcha",
     "optional": "optional",
     "enable_google_captcha": "Enable Google Captcha",
     "yes": "Yes",
