--- a/install/language/fa.json
+++ b/install/language/fa.json
@@ -47,7 +47,9 @@
     "google_analytics_web_id": "شناسه وب سایت گوگل آنالیتیکس",
     "captcha": "کپچا",
     "enable": "فعال کردن",
+    "disable": "غیرفعال",
     "google_captcha": "گوگل کپچا",
+    "image_captcha": "کپچا تصویری",
     "optional": "دلخواه",
     "enable_google_captcha": "فعال کردن گوگل کپچا",
     "yes": "بله",
