Add edit recaptcha setting in admin panel security tab

--- a/install/language/en.json
+++ b/install/language/en.json
@@ -49,7 +49,7 @@
     "captcha": "Captcha",
     "enable": "Enable",
     "disable": "Disable",
-    "google_captcha": "Google Captcha",
+    "google_captcha": "Google Reaptcha v2",
     "image_captcha": "Image Captcha",
     "optional": "optional",
     "enable_google_captcha": "Enable Google Captcha",
