--- a/install/language/fa.json
+++ b/install/language/fa.json
@@ -48,7 +48,7 @@
     "captcha": "کپچا",
     "enable": "فعال کردن",
     "disable": "غیرفعال",
-    "google_captcha": "گوگل کپچا",
+    "google_captcha": "گوگل کپچا v2",
     "image_captcha": "کپچا تصویری",
     "optional": "دلخواه",
     "enable_google_captcha": "فعال کردن گوگل کپچا",
