Rewrite Create Account encryption system. Thanks @code-path, @Shauren.  Close #27
* Implement Crypto Library ( passwords encryption )
* Implement new SRP6 variants Battle Net (SRP6 V2 and SRP6 V1)
* Implement Auth config file for moderate encryption system and other option
* Fix change password battle net accounts
* Remove all encryption password from emulators

* Note : After update you must set auth config from admin panel settings and update emulator name from realms settings

--- a/install/language/en.json
+++ b/install/language/en.json
@@ -71,6 +71,16 @@
     "port": "Port",
     "auth_database": "Realmd/Logon/Auth Database",
     "auth_database_detail": "Enter Realmd/Logon/Auth database information.",
+    "auth_config": "Auth configuration <span style='color: #f00;'>(! important)</span>",
+    "auth_config_detail": "Settings related to Realmd/Logon/Auth database and account password encryption.",
+    "account_encryption": "Account password encryption",
+    "account_encryption_detail": "<span style='color: #f00;'>SRP6:</span> Select this for most modern emulators (with <b>salt</b> and <b>verifier</b> columns in <b>auth.accounts</b> table).<br/><span style='color: #f00;'>SPH:</span> Select this for aged emulators (with <b>sha_pass_hash</b> column in <b>auth.accounts</b> table).<br/><span style='color: #f00;'>SRP:</span> Mostly for <b>cMangos</b> and <b>vMangos</b> emulators.",
+    "rbac": "RBAC",
+    "rbac_detail": "Set yes for emulators that has RBAC tables.",
+    "battle_net": "BattleNet",
+    "battle_net_detail": "Set yes for emulators that has auth.battlenet_accounts table.",
+    "battle_net_encryption": "BattleNet password encryption",
+    "battle_net_encryption_detail": "<span style='color: #f00;'>SRP6 (V1 / V2):</span> Select this for most modern emulators (with <b>salt</b> and <b>verifier</b> columns in <b>auth.battlenet_accounts table</b>).<br/><span style='color: #f00;'>SPH:</span> Select this for aged emulators (with <b>sha_pass_hash</b> column in <b>auth.battlenet_accounts</b> table).",
     "realms": "Realms",
     "realms_detail": "If you want to add multiple realms, add all your realms first and then configure them. You can also add only one realm and you can configure other realms via the admin panel afterwards.",
     "add_realm": "Add Realm",
