--- a/install/language/fa.json
+++ b/install/language/fa.json
@@ -65,6 +65,16 @@
     "port": "پورت",
     "auth_database": "دیتابیس Realmd/Logon/Auth",
     "auth_database_detail": "اطلاعات دیتابیس Realmd/Logon/Auth را وارد کنید.",
+    "auth_config": "تنظیمات Auth <span style='color: #f00;'>(! مهم)</span>",
+    "auth_config_detail": "تنظیمات مربوط به دیتابیس Realmd/Logon/Auth و رمزنگاری رمز عبور اکانت ها.",
+    "account_encryption": "رمزنگاری رمز عبور اکانت ها",
+    "account_encryption_detail": "<span style='color: #f00;'>SRP6:</span> این مورد را برای اکثر Coreهای مدرن تر (با ستون های <b>salt</b> و <b>verifier</b> در جدول <b>auth.accounts</b> انتخاب کنید).<br/><span style='color: #f00;'>SPH:</span> این مورد را برای Coreهای قدیمی انتخاب کنید (با ستون <b>sha_pass_hash</b> در جدول <b>auth.accounts</b>).<br/><span style='color: #f00;'>SRP:</span> بیشتر برای Coreهای <b>cMangos</b> و <b>vMangos</b>.",
+    "rbac": "RBAC",
+    "rbac_detail": "بله را برای Coreهایی که جداول RBAC دارند انتخاب کنید.",
+    "battle_net": "BattleNet",
+    "battle_net_detail": "بله را برای Coreهایی که جدول auth.battlenet_accounts دارند انتخاب کنید.",
+    "battle_net_encryption": "رمزنگاری رمز عبور BattleNet",
+    "battle_net_encryption_detail": "<span style='color: #f00;'>SRP6 (V1 / V2):</span> این مورد را برای اکثر Coreهای مدرن تر انتخاب کنید (با ستون های <b>salt</b> و <b>verifier</b> در جدول <b>auth.battlenet_accounts</b>).<br/><span style='color: #f00;'>SPH:</span> این مورد را برای Coreهای قدیمی انتخاب کنید (با ستون <b>sha_pass_hash</b> در جدول <b>auth.battlenet_accounts</b>).",
     "realms": "ریلم ها",
     "realms_detail": "اگر می خواهید چندین ریلم اضافه کنید، ابتدا همه ریلم های خود را اضافه کنید و سپس آنها را پیکربندی کنید. شما همچنین می توانید تنها یک ریلم اضافه کنید و سپس می توانید ریلم های دیگر را از طریق پنل مدیریت پیکربندی کنید.",
     "add_realm": "افزودن ریلم",
