--- a/install/language/fa.json
+++ b/install/language/fa.json
@@ -49,6 +49,7 @@
     "enable": "فعال کردن",
     "disable": "غیرفعال",
     "google_captcha": "گوگل کپچا v2",
+    "google_captcha3": "گوگل کپچا v3",
     "image_captcha": "کپچا تصویری",
     "optional": "دلخواه",
     "enable_google_captcha": "فعال کردن گوگل کپچا",
