Move two factor authenticator from emulators to auth config

--- a/install/language/en.json
+++ b/install/language/en.json
@@ -82,6 +82,10 @@
     "battle_net_detail": "Set yes for emulators that has auth.battlenet_accounts table.",
     "battle_net_encryption": "BattleNet password encryption",
     "battle_net_encryption_detail": "<span style='color: #f00;'>SRP6 (V1 / V2):</span> Select this for most modern emulators (with <b>salt</b> and <b>verifier</b> columns in <b>auth.battlenet_accounts table</b>).<br/><span style='color: #f00;'>SPH:</span> Select this for aged emulators (with <b>sha_pass_hash</b> column in <b>auth.battlenet_accounts</b> table).",
+    "totp_secret": "Totp secret",
+    "totp_secret_detail": "Set yes for emulators that auth.account table has <b>token_key</b> or <b>totp_secret</b> column.",
+    "totp_secret_name": "Totp secret field name",
+    "totp_secret_name_detail": "<span style='color: #f00;'>totp_secret:</span> Select this for most modern emulators (with <b>totp_secret</b> column in <b>auth.account table</b>).<br/><span style='color: #f00;'>token_key:</span> Select this for aged emulators (with <b>token_key</b> column in <b>auth.account</b> table).",
     "realms": "Realms",
     "realms_detail": "If you want to add multiple realms, add all your realms first and then configure them. You can also add only one realm and you can configure other realms via the admin panel afterwards.",
     "add_realm": "Add Realm",
