--- a/install/language/fa.json
+++ b/install/language/fa.json
@@ -76,6 +76,10 @@
     "battle_net_detail": "بله را برای Coreهایی که جدول auth.battlenet_accounts دارند انتخاب کنید.",
     "battle_net_encryption": "رمزنگاری رمز عبور BattleNet",
     "battle_net_encryption_detail": "<span style='color: #f00;'>SRP6 (V1 / V2):</span> این مورد را برای اکثر Coreهای مدرن تر انتخاب کنید (با ستون های <b>salt</b> و <b>verifier</b> در جدول <b>auth.battlenet_accounts</b>).<br/><span style='color: #f00;'>SPH:</span> این مورد را برای Coreهای قدیمی انتخاب کنید (با ستون <b>sha_pass_hash</b> در جدول <b>auth.battlenet_accounts</b>).",
+    "totp_secret": "Totp secret",
+    "totp_secret_detail": "برای Core هایی که در جدول auth.account دارای فیلد <b>token_key</b> یا <b>totp_secret</b> است، بله را انتخاب کنید.",
+    "totp_secret_name": "نام فیلد Totp secret",
+    "totp_secret_name_detail": "<span style='color: #f00;'>totp_secret:</span> این مورد را برای اکثر Coreهای مدرن تر انتخاب کنید (با ستون <b>totp_secret</b> در جدول <b>auth.account</b>).<br/><span style='color: #f00;'>token_key:</span> این مورد را برای Coreهای قدیمی انتخاب کنید (با ستون <b>token_key</b> در جدول <b>auth.account</b>).",
     "realms": "ریلم ها",
     "realms_detail": "اگر می خواهید چندین ریلم اضافه کنید، ابتدا همه ریلم های خود را اضافه کنید و سپس آنها را پیکربندی کنید. شما همچنین می توانید تنها یک ریلم اضافه کنید و سپس می توانید ریلم های دیگر را از طریق پنل مدیریت پیکربندی کنید.",
     "add_realm": "افزودن ریلم",
