--- a/install/language/cn.json
+++ b/install/language/cn.json
@@ -1,123 +1,123 @@
 { 
-    "next": "Next", 
-    "okay": "Okay",
-    "cancel": "Cancel",
+    "next": "继续", 
+    "okay": "好的",
+    "cancel": "取消",
     "language": "选择语言",
-    "introduction": "Introduction",
-    "requirements": "Requirements",
-    "general": "General",
-    "database": "Database",
-    "realms": "Realms",
-    "complete": "Complete installation",
-    "welcome": "Welcome to FusionCMS",
-    "dear_customer": "Dear customer",
-    "fusion_info": "We are happy to introduce you to the next chapter of our very own FusionCMS. Years have passed since the initial release and the system has grown better and stronger for every version. The core of this CMS is powered by clean, object oriented PHP code, kept in shape by the incredibly powerful CodeIgniter framework. On the front we also make sure to amaze your visitors with more Javascript-powered live interactions than ever before.",
-    "start_installer": "Start the installer",
-    "server_requirements": "Server requirements",
-    "important": "important!",
-    "what_need": "What do I need to run this system?",
-    "folder_permissions": "Folder Permissions",
-    "needs_writable": "needs to be writable",
+    "introduction": "系统介绍",
+    "requirements": "必要条件",
+    "general": "常规设置",
+    "database": "数据库",
+    "realms": "领域",
+    "complete": "完全安装",
+    "welcome": "欢迎使用FusionCMS",
+    "dear_customer": "尊敬的用户",
+    "fusion_info": "我们很高兴向您介绍我们自己的FusionCMS的下一章。自最初发布以来，多年过去了，该系统在每个版本中都变得越来越好、越来越强大。该CMS的核心由干净的、面向对象的PHP代码提供支持，并由功能强大的CodeIgniter框架保持其形状。在正面，我们还确保通过比以往任何时候都更多的Javascript实时交互让您的访客感到惊讶。",
+    "start_installer": "启动安装程序",
+    "server_requirements": "服务器要求",
+    "important": "重要！",
+    "what_need": "运行此系统需要什么？",
+    "folder_permissions": "文件夹权限",
+    "needs_writable": "需要可写",
     "see": "see",
-    "is_writable": "is writable",
-    "php_version": "PHP Version",
-    "minimum_required_php": "Minimum required PHP version",
-    "php_extensions": "PHP Extensions",
-    "extensions_required_php": "The following PHP extensions are required",
-    "extensions_required": "The following extensions are missing",
-    "enable_extensions": "How do I enable PHP extensions?",
-    "modules_required": "The following modules are missing",
-    "apache_modules": "Apache Modules",
-    "recommend_apache": "We recommend FusionCMS in combination with an Apache Webserver.",
-    "apache_required": "The Apache modules you'll need are",
-    "enable_modules": "How do I enable Apache modules?",
-    "general_settings": "General settings",
-    "general_detail": "Enter site and server information.",
-    "website_title": "Website title",
-    "server_name": "Server name",
-    "realmlist": "Realmlist",
-    "description": "Search engine: description",
-    "description_tip": "Description: Best World of Warcraft private server in the entire world!",
-    "keywords": "Search engine: keywords (separated by comma)",
-    "keywords_tip": "Search engine, keywords (separated by comma): world of warcraft,wow,private server,pvp",
-    "admin_security_code": "Admin panel extra security password",
-    "max_expansion": "Max expansion",
-    "max_expansion_detail": "Choose highest expansion of your server",
-    "google_analytics": "Google Analytics",
-    "google_analytics_detail": "website ID for advanced statistics (optional)",
-    "google_analytics_web_id": "Google Analytics website ID",
-    "captcha": "Captcha",
-    "enable": "Enable",
-    "disable": "Disable",
-    "google_captcha": "Google Reaptcha v2",
-    "google_captcha3": "Google Reaptcha v3",
-    "image_captcha": "Image Captcha",
-    "optional": "optional",
-    "enable_google_captcha": "Enable Google Captcha",
-    "yes": "Yes",
-    "no": "No",
-    "site_key": "Site key",
-    "site_key_detail": "Use this in the HTML code your site serves to users.",
-    "secret_key": "Secret key",
-    "secret_key_detail": "Use this for communication between your site and Google. Be sure to keep it a secret.",
+    "is_writable": "可写",
+    "php_version": "PHP版本",
+    "minimum_required_php": "所需的最低PHP版本",
+    "php_extensions": "PHP扩展",
+    "extensions_required_php": "需要以下PHP扩展",
+    "extensions_required": "缺少以下扩展",
+    "enable_extensions": "如何启用PHP扩展？",
+    "modules_required": "缺少以下模块",
+    "apache_modules": "Apache模块",
+    "recommend_apache": "我们建议FusionCMS与Apache Web服务器结合使用",
+    "apache_required": "您需要的Apache模块有",
+    "enable_modules": "如何启用Apache模块？",
+    "general_settings": "常规设置",
+    "general_detail": "输入站点和服务器信息",
+    "website_title": "网站标题",
+    "server_name": "服务器名称",
+    "realmlist": "领域列表",
+    "description": "搜索引擎：描述",
+    "description_tip": "描述：世界上最好的魔兽世界私人服务器！",
+    "keywords": "搜索引擎：关键字（用逗号分隔）",
+    "keywords_tip": "搜索引擎，关键词（逗号分隔）: world of warcraft,wow,private server,pvp",
+    "admin_security_code": "管理面板的安全密码",
+    "max_expansion": "最高扩展",
+    "max_expansion_detail": "选择服务器的最高扩展",
+    "google_analytics": "谷歌分析",
+    "google_analytics_detail": "高级统计信息的网站ID（可选）",
+    "google_analytics_web_id": "谷歌分析网站ID",
+    "captcha": "验证码",
+    "enable": "启用",
+    "disable": "禁用",
+    "google_captcha": "Google 验证码 v2",
+    "google_captcha3": "Google 验证码 v3",
+    "image_captcha": "图像验证码",
+    "optional": "选择",
+    "enable_google_captcha": "启用Google验证码",
+    "yes": "是",
+    "no": "否",
+    "site_key": "站点密钥",
+    "site_key_detail": "在您的网站为用户提供的HTML代码中使用此代码",
+    "secret_key": "密钥",
+    "secret_key_detail": "将此用于您的网站和谷歌之间的通信。一定要保守秘密",
     "cdn": "CDN",
-    "cdn_detail": "Use content delivery network for Javascript libraries (do only disable it for LAN-only environments)",
-    "database_settings": "Database settings",
-    "website_database": "Website Database",
-    "website_database_detail": "Enter website database information.",
-    "hostname": "Hostname",
-    "username": "Username",
-    "password": "Password",
-    "database_name": "Database name",
-    "port": "Port",
-    "auth_database": "Realmd/Logon/Auth Database",
-    "auth_database_detail": "Enter Realmd/Logon/Auth database information.",
-    "auth_config": "Auth configuration <span style='color: #f00;'>(! important)</span>",
-    "auth_config_detail": "Settings related to Realmd/Logon/Auth database and account password encryption.",
-    "account_encryption": "Account password encryption",
-    "account_encryption_detail": "<span style='color: #f00;'>SRP6:</span> Select this for most modern emulators (with <b>salt</b> and <b>verifier</b> columns in <b>auth.accounts</b> table).<br/><span style='color: #f00;'>SPH:</span> Select this for aged emulators (with <b>sha_pass_hash</b> column in <b>auth.accounts</b> table).<br/><span style='color: #f00;'>SRP:</span> Mostly for <b>cMangos</b> and <b>vMangos</b> emulators.",
+    "cdn_detail": "对Javascript库使用内容交付网络（仅对仅限LAN的环境禁用）",
+    "database_settings": "数据库设置",
+    "website_database": "网站数据库",
+    "website_database_detail": "输入网站数据库信息",
+    "hostname": "主机名",
+    "username": "用户名",
+    "password": "密码",
+    "database_name": "数据库名称",
+    "port": "端口",
+    "auth_database": "领域/登录/身份验证数据库",
+    "auth_database_detail": "输入领域/登录/身份验证数据库信息",
+    "auth_config": "身份验证配置 <span style='color: #f00;'>(重要)</span>",
+    "auth_config_detail": "与领域/登录/身份验证数据库和帐户密码加密相关的设置",
+    "account_encryption": "帐户密码加密",
+    "account_encryption_detail": "<span style='color:#f00;'>SRP6:</span>对于大多数模拟器（在<b>auth.accounts</b>表中具有<b>salt</b>和<b>verifier</b>列），请选择此选项<br/><span style='color:#f00;'>SPH:</span>为老化的模拟器选择此项（使用<b>auth.accounts</b>表中的<b>sha_pass_hash</b>列）<br/><span style='color:#f00;'>SRP:</span>主要用于<b>cMangos</b>和<b>vMangos<b>模拟器",
     "rbac": "RBAC",
-    "rbac_detail": "Set yes for emulators that has RBAC tables.",
+    "rbac_detail": "为具有RBAC表的模拟器设置“是”",
     "battle_net": "BattleNet",
-    "battle_net_detail": "Set yes for emulators that has auth.battlenet_accounts table.",
-    "battle_net_encryption": "BattleNet password encryption",
-    "battle_net_encryption_detail": "<span style='color: #f00;'>SRP6 (V1 / V2):</span> Select this for most modern emulators (with <b>salt</b> and <b>verifier</b> columns in <b>auth.battlenet_accounts table</b>).<br/><span style='color: #f00;'>SPH:</span> Select this for aged emulators (with <b>sha_pass_hash</b> column in <b>auth.battlenet_accounts</b> table).",
+    "battle_net_detail": "为具有auth.battlet_accounts表的模拟器设置“是”。",
+    "battle_net_encryption": "BattleNet密码加密",
+    "battle_net_encryption_detail": "<span style='color:#f00;'>SRP6（V1/V2）：</span>对于大多数模拟器（在<b>auth.battlet_accounts表</b>中具有<b>salt</b>和<b>verifier</b>列），请选择此选项<br/><span style='color:#f00;'>SPH:</span>为老化的模拟器选择此项（使用<b>auth.bracknet_accounts</b>表中的<b>sha_pass_hash</b>列）。",
     "totp_secret": "Totp secret",
-    "totp_secret_detail": "Set yes for emulators that auth.account table has <b>token_key</b> or <b>totp_secret</b> column.",
-    "totp_secret_name": "Totp secret field name",
-    "totp_secret_name_detail": "<span style='color: #f00;'>totp_secret:</span> Select this for most modern emulators (with <b>totp_secret</b> column in <b>auth.account table</b>).<br/><span style='color: #f00;'>token_key:</span> Select this for aged emulators (with <b>token_key</b> column in <b>auth.account</b> table).",
-    "realms": "Realms",
-    "realms_detail": "If you want to add multiple realms, add all your realms first and then configure them. You can also add only one realm and you can configure other realms via the admin panel afterwards.",
-    "add_realm": "Add Realm",
-    "emulator": "Emulator",
-    "emulator_detail": "Please choose right emulator for your realm.",
-    "loading": "Loading",
-    "realm_settings": "Realm settings",
-    "realm_settings_detail": "Enter realm information.",
-    "realm_name": "Realm name",
-    "cap": "Max allowed players online",
-    "realm_expansion": "Expansion (Choose expansion of this realm)",
-    "realm_expansion_detail": "Choose expansion of this realm",
-    "realm_port": "Realm port (usually 8085 for Trinity/SkyFire/MaNGoS)",
-    "realm_database": "Realm Database settings",
-    "realm_database_detail": "Enter World/Characters database information.",
-    "database_username": "Database username",
-    "database_password": "Database password",
-    "database_port": "Database port",
-    "database_characters": "Characters database name",
-    "database_world": "World database name",
-    "console_settings": "Console settings",
-    "console_settings_detail_1": "Required for emulators that use remote console systems.",
-    "console_settings_detail_2": "For an ingame account with GM level high enough to connect to your emulator console remotely (see your emulator's config files for more details)",
-    "console_username": "Console username",
-    "console_password": "Console password",
-    "console_port": "Console port : usually 3443 for RA and 7878 for SOAP)",
-    "installing": "Installing...",
+    "totp_secret_detail": "为auth.account表具有<b>token_key</b>或<b>totp_secret</b>列的模拟器设置",
+    "totp_secret_name": "Totp secret字段名称",
+    "totp_secret_name_detail": "<span style='color:#f00；'>totp_secret：</span>对于大多数现代模拟器（在<b>auth.account表</b>中有<b>totp_secret</b>列），请选择此选项<br/><span style='color:#f00；'>token_key：</span>为老化的模拟器选择此项（使用<b>auth.account</b>表中的<b>token_key</b>列）",
+    "realms": "领域",
+    "realms_detail": "如果要添加多个领域，请先添加所有领域，然后进行配置。您也可以只添加一个领域，然后可以通过管理面板配置其他领域",
+    "add_realm": "添加Realm",
+    "emulator": "模拟器",
+    "emulator_detail": "请为您的领域选择正确的模拟器",
+    "loading": "加载中",
+    "realm_settings": "Realm设置",
+    "realm_settings_detail": "输入领域信息",
+    "realm_name": "Realm名称",
+    "cap": "允许玩家在线的最大数量",
+    "realm_expansion": "扩展（选择此领域的扩展）",
+    "realm_expansion_detail": "选择此领域的扩展",
+    "realm_port": "Realm端口（Trinity/SkyFire/MaNGoS通常为8085）",
+    "realm_database": "Realm数据库设置",
+    "realm_database_detail": "输入世界/角色数据库信息",
+    "database_username": "数据库用户名",
+    "database_password": "数据库密码",
+    "database_port": "数据库端口",
+    "database_characters": "Characters数据库",
+    "database_world": "World数据库",
+    "console_settings": "控制台设置",
+    "console_settings_detail_1": "使用远程控制台系统的模拟器需要",
+    "console_settings_detail_2": "对于GM级别足够高的游戏帐户，可以远程连接到模拟器控制台（有关更多详细信息，请参阅模拟器的配置文件）",
+    "console_username": "控制台用户名",
+    "console_password": "控制台密码",
+    "console_port": "控制台端口：RA通常为3443，SOAP通常为7878）",
+    "installing": "正在安装...",
     "github": "Github",
-    "modules": "Modules",
-    "themes": "Themes",
-    "support": "Support",
+    "modules": "模块",
+    "themes": "主题",
+    "support": "支持",
     "copyright": "© 2023 FusionCMS. All rights reserved. ",
-    "previous_step": "Previous step",
-    "next_step": "Next step"
+    "previous_step": "上一步",
+    "next_step": "下一步"
 }
