--- a/install/language/cn.json
+++ b/install/language/cn.json
@@ -77,15 +77,15 @@
     "account_encryption": "帐户密码加密",
     "account_encryption_detail": "<span style='color:#f00;'>SRP6:</span>对于大多数模拟器（在<b>auth.accounts</b>表中具有<b>salt</b>和<b>verifier</b>列），请选择此选项<br/><span style='color:#f00;'>SPH:</span>为老化的模拟器选择此项（使用<b>auth.accounts</b>表中的<b>sha_pass_hash</b>列）<br/><span style='color:#f00;'>SRP:</span>主要用于<b>cMangos</b>和<b>vMangos<b>模拟器",
     "rbac": "RBAC",
-    "rbac_detail": "为具有RBAC表的模拟器设置“是”",
+    "rbac_detail": "为具有RBAC表的模拟器设置",
     "battle_net": "BattleNet",
-    "battle_net_detail": "为具有auth.battlet_accounts表的模拟器设置“是”。",
+    "battle_net_detail": "为具有auth.battlet_accounts表的模拟器设置",
     "battle_net_encryption": "BattleNet密码加密",
     "battle_net_encryption_detail": "<span style='color:#f00;'>SRP6（V1/V2）：</span>对于大多数模拟器（在<b>auth.battlet_accounts表</b>中具有<b>salt</b>和<b>verifier</b>列），请选择此选项<br/><span style='color:#f00;'>SPH:</span>为老化的模拟器选择此项（使用<b>auth.bracknet_accounts</b>表中的<b>sha_pass_hash</b>列）。",
     "totp_secret": "Totp secret",
     "totp_secret_detail": "为auth.account表具有<b>token_key</b>或<b>totp_secret</b>列的模拟器设置",
     "totp_secret_name": "Totp secret字段名称",
-    "totp_secret_name_detail": "<span style='color:#f00；'>totp_secret：</span>对于大多数现代模拟器（在<b>auth.account表</b>中有<b>totp_secret</b>列），请选择此选项<br/><span style='color:#f00；'>token_key：</span>为老化的模拟器选择此项（使用<b>auth.account</b>表中的<b>token_key</b>列）",
+    "totp_secret_name_detail": "<span style='color:#f00;'>totp_secret：</span>对于大多数现代模拟器（在<b>auth.account表</b>中有<b>totp_secret</b>列），请选择此选项<br/><span style='color:#f00;'>token_key：</span>为老化的模拟器选择此项（使用<b>auth.account</b>表中的<b>token_key</b>列）",
     "realms": "领域",
     "realms_detail": "如果要添加多个领域，请先添加所有领域，然后进行配置。您也可以只添加一个领域，然后可以通过管理面板配置其他领域",
     "add_realm": "添加Realm",
