--- a/install/language/pt-BR.json
+++ b/install/language/pt-BR.json
@@ -119,5 +119,6 @@
     "support": "Suporte",
     "copyright": "© 2023 FusionCMS. All rights reserved. ",
     "previous_step": "Etapa anterior",
-    "next_step": "Próxima Etapa"
+    "next_step": "Próxima Etapa",
+    "step": "Etapa"
 }
