Module/Install: Cleanup language files

--- a/application/modules/install/languages/en.json
+++ b/application/modules/install/languages/en.json
@@ -7,11 +7,10 @@
     "requirements": "Requirements",
     "general": "General",
     "database": "Database",
-    "realms": "Realms",
     "complete": "Complete installation",
     "welcome": "Welcome to FusionCMS",
     "dear_customer": "Dear customer",
-    "fusion_info": "We are happy to introduce you to the next chapter of our very own FusionCMS. Years have passed since the initial release and the system has grown better and stronger for every version. The core of this CMS is powered by clean, object oriented PHP code, kept in shape by the incredibly powerful CodeIgniter framework. On the front we also make sure to amaze your visitors with more Javascript-powered live interactions than ever before.",
+    "fusion_info": "We are happy to introduce you to the next chapter of our very own FusionCMS. Years have passed since the initial release and the system has grown better and stronger for every version. The core of this CMS is powered by clean, object oriented PHP code, kept in shape by the incredibly powerful CodeIgniter 4 framework. On the front we also make sure to amaze your visitors with more Javascript-powered live interactions than ever before.",
     "start_installer": "Start the installer",
     "server_requirements": "Server requirements",
     "important": "important!",
