--- a/application/modules/install/languages/fa.json
+++ b/application/modules/install/languages/fa.json
@@ -7,11 +7,10 @@
     "requirements": "نیازمندیها",
     "general": "عمومی",
     "database": "دیتابیس",
-    "realms": "ریلم ها",
     "complete": "نصب کامل",
     "welcome": "به FusionCMS خودش آمدید",
     "dear_customer": "مشتری عزیز",
-    "fusion_info": "ما خوشحالیم که شما را با فصل بعدی FusionCMS خودمان آشنا می کنیم. سال ها از انتشار اولیه می گذرد و سیستم برای هر نسخه بهتر و قوی تر شده است. هسته این CMS از کدهای PHP تمیز و شی گرا پشتیبانی می کند که توسط چارچوب فوق العاده قدرتمند CodeIgniter شکل گرفته است. در قسمت جلو، ما همچنین مطمئن می شویم که بازدیدکنندگان شما را با تعاملات زنده با جاوا اسکریپت بیشتر از همیشه متحیر می کنیم.",
+    "fusion_info": "ما خوشحالیم که شما را با فصل بعدی FusionCMS خودمان آشنا می کنیم. سال ها از انتشار اولیه می گذرد و سیستم برای هر نسخه بهتر و قوی تر شده است. هسته این CMS از کدهای PHP تمیز و شی گرا پشتیبانی می کند که توسط چارچوب فوق العاده قدرتمند CodeIgniter 4 شکل گرفته است. در قسمت جلو، ما همچنین مطمئن می شویم که بازدیدکنندگان شما را با تعاملات زنده با جاوا اسکریپت بیشتر از همیشه متحیر می کنیم.",
     "start_installer": "شروع نصب",
     "server_requirements": "نیازمندی های سرور",
     "important": "مهم!",
