--- a/application/modules/install/languages/pt-BR.json
+++ b/application/modules/install/languages/pt-BR.json
@@ -7,11 +7,10 @@
     "requirements": "Requisitos",
     "general": "Geral",
     "database": "Banco de dados",
-    "realms": "Realms",
     "complete": "Concluir instalação",
     "welcome": "Bem-vindo ao FusionCMS",
     "dear_customer": "Prezado cliente",
-    "fusion_info": "Estamos felizes em apresentar a você o próximo capítulo do nosso próprio FusionCMS. Anos se passaram desde o lançamento inicial e o sistema cresceu, ficando melhor e mais forte a cada versão. O núcleo deste CMS é alimentado por um código PHP limpo, orientado a objetos, mantido em forma pelo incrivelmente poderoso framework CodeIgniter. Na frente, também nos certificamos de surpreender seus visitantes com mais interações ao vivo movidas a Javascript do que nunca.",
+    "fusion_info": "Estamos felizes em apresentar a você o próximo capítulo do nosso próprio FusionCMS. Anos se passaram desde o lançamento inicial e o sistema cresceu, ficando melhor e mais forte a cada versão. O núcleo deste CMS é alimentado por um código PHP limpo, orientado a objetos, mantido em forma pelo incrivelmente poderoso framework CodeIgniter 4. Na frente, também nos certificamos de surpreender seus visitantes com mais interações ao vivo movidas a Javascript do que nunca.",
     "start_installer": "Iniciar o instalador",
     "server_requirements": "Requisitos do servidor",
     "important": "importante!",
