Update copyright in install module

--- a/application/modules/install/languages/en.json
+++ b/application/modules/install/languages/en.json
@@ -116,7 +116,7 @@
     "modules": "Modules",
     "themes": "Themes",
     "support": "Support",
-    "copyright": "© 2023 FusionCMS. All rights reserved. ",
+    "copyright": "All rights reserved.",
     "previous_step": "Previous step",
     "next_step": "Next step",
     "step": "Step"
