--- a/application/modules/install/languages/fa.json
+++ b/application/modules/install/languages/fa.json
@@ -110,7 +110,7 @@
     "modules": "ماژول ها",
     "themes": "تم ها",
     "support": "پشتیبانی",
-    "copyright": "© 2023 FusionCMS. تمامی حقوق محفوظ است.",
+    "copyright": ". تمامی حقوق محفوظ است.",
     "previous_step": "مرحله قبل",
     "next_step": "مرحله بعد",
     "step": "مرحله"
