--- a/application/modules/install/languages/pt-BR.json
+++ b/application/modules/install/languages/pt-BR.json
@@ -116,7 +116,7 @@
     "modules": "Modulos",
     "themes": "Temas",
     "support": "Suporte",
-    "copyright": "© 2023 FusionCMS. All rights reserved. ",
+    "copyright": "All rights reserved.",
     "previous_step": "Etapa anterior",
     "next_step": "Próxima Etapa",
     "step": "Etapa"
